2013-02-22 Riccardo Mottola <rm@gnu.org>

	* GRBox.[h,m] (position)
	Add position accessor
	
2013-02-18 Riccardo Mottola <rm@gnu.org>

	* GRText.m
	Fix warnings.

2013-02-17 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m (rectForPage)
	Match signature to NSInteger

2013-02-17 Riccardo Mottola <rm@gnu.org>

	* GRBox.m
	* GRCircle.m
	* GRDocView.h
	* GRDocView.m
	* GRDrawableObject.h
	* GRDrawableObject.m
	* GRPathObject.h
	* GRPathObject.m
	* GRPropsEditor.h
	float to CGFloat transition

2012-09-24 Riccardo Mottola <rm@gnu.org>

	* GRBox.m
	* GRCircle.m
	Generate properties from description and use the
	properties initializer.

2012-09-23 Riccardo Mottola <rm@gnu.org>

	* GRDrawableObject.m
	Init also with visible and locked properties.

2012-09-23 Riccardo Mottola <rm@gnu.org>

	* GRTextEditor.m
	* GRTextEditorView.h
	* GRTextEditorView.m
	Use standard NSFontPanel instead of font pick-list.

2012-09-20 Wolfgang Lux

	* GRDocView.m
	* GRDocView.h
	Fix cursor and tracking rect.

2012-09-20 Riccardo Mottola <rm@gnu.org>

	* GRText.m
	If user action is canceled, do not return an object.

2012-09-16 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m:
	Fix object duplication during drag operation.

2012-09-14 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m
	* GRBox.m
	* GRCircle.m
	* GRDocView.m
	* GRDrawableObject.h
	* GRDrawableObject.m
	* GRObjectEditor.m
	* GRText.m
	Unify selection detection to "objectHitForSelection".

2012-09-12 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Improve positioning of 50/100/200 zooming without clicking.

2012-09-12 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	* Resources/MainMenu.gorm
	Zoom 50/100/200

2012-09-12 Riccardo Mottola <rm@gnu.org>

	* GRDocView.[h,m]
	Separate zooming from zoom index search in two methods.

2012-09-10 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Implement delete, implement undo for pasteboard operations.

2012-09-10 Riccardo Mottola <rm@gnu.org>

	* GRBox.h
	* GRBox.m
	* GRDrawableObject.h