@@ -75,15 +75,21 @@
         {
             pp = [event locationInWindow];
             pp = [[object view] convertPoint: pp fromView: nil];
-//            if([[object view] shiftclick])
-//                pp = pointApplyingCostrainerToPoint(pp, p);
+            if([[object view] shiftclick])
+              {
+                NSPoint pos;
+                CGFloat w, h;
 
-/*            pntonpnt = [object pointOnPoint: [object currentPoint]];
-            if(pntonpnt)
-            {
-                if([object currentPoint] == [object firstPoint] || pntonpnt == [object firstPoint])
-                    [pntonpnt moveToPoint: pp];
-            } */
+                pos = [(GRBox *)object position];
+                w = pos.x-pp.x;
+                h = pos.y-pp.y;
+
+                if (w < h)
+                  pp.y = pos.y+w;
+                else
+                  pp.x = pos.x+h;
+              }
+
             [[(GRPathObject *)object currentPoint] moveToPoint: pp];
             [(GRPathObject *)object remakePath];
 
